--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.k33ptoo</groupId>
-    <artifactId>KRandomUserFX</artifactId>
+    <artifactId>KRandomUser</artifactId>
     <version>1.0.0</version>
 
     <packaging>maven-plugin</packaging>
-    <name>KRandomUserFX</name>
+    <name>KRandomUser</name>
     <distributionManagement>
         <repository>
             <id>internal.repo</id>
@@ -79,19 +79,13 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <version>16</version>
-            <type>jar</type>
-        </dependency>
     </dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <github.global.server>github</github.global.server>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     
     <developers>
